<resources>

    <string name="hint_teamA">Team A</string>
    <string name="hint_teamB">Team B</string>
    <string name="vs">VS</string>
    <string name="dialog_ok">OK</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="dialog_help_msg">Touch the court with the following gestures to record events.</string>

    <string name="dialog_halftime_msg">Change to second half of the game?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>

    <string name="app_name">SportsRecorder</string>
    <string name="summary_title">Summary</string>
    <string name="share">SHARE</string>

</resources>
