<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5"
            android:gravity="center">

            <EditText
                android:id="@+id/teamNameA_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_teamA"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:gravity="center"/>

            <EditText
                android:id="@+id/teamNameB_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_teamB"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/foo"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/teamARadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/teamBRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <ImageView
            android:id="@+id/basketball_img"
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:src="@drawable/basketball" />

    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ok"/>

</LinearLayout>